V1.3
=====

Refactored fossil definitions.
fossils and minerals are now used up upon right clicking.
started defining krawl ingame.
added swar.