@@ -3,5 +3,6 @@ V1.3
 
 Refactored fossil definitions.
 fossils and minerals are now used up upon right clicking.
-started defining krawl ingame.
+started defining krawl ingame, AI, Properties, Stats.
 added swar.
+Killed owned spectrobes now return to the prizmod instead of dying.
